objects/DMAPP__DM_Decision_Criterion__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing the list of decision criteria associated with Opportunities</description>
    <fields>
        <fullName>DMAPP__Criterion__c</fullName>
        <label>Criterion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipName>DM_Decision_Criterions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>DM_Decision_Criterions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Position_Number__c</fullName>
        <formula>IF(ISPICKVAL(DMAPP__Our_Position__c, &apos;Equal&apos;), 1,
      IF(ISPICKVAL(DMAPP__Our_Position__c, &apos;Up&apos;), 2, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Our_Position_Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Our_Position__c</fullName>
        <label>Our Position</label>
        <picklist>
            <picklistValues>
                <fullName>Equal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rank_Rollup__c</fullName>
        <label>Rank Rollup</label>
        <summarizedField>DMAPP__DM_Decision_Criterion_Rank__c.DMAPP__Computed_Rank__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_Decision_Criterion_Rank__c.DMAPP__DM_Decision_Criterion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score_Rollup__c</fullName>
        <label>Score Rollup</label>
        <summarizedField>DMAPP__DM_Decision_Criterion_Score__c.DMAPP__Computed_Rank__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_Decision_Criterion_Score__c.DMAPP__DM_Decision_Criterion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Decision Criterion</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Decision Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Criterions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>